force-app/main/default/objects/Opportunity/fields/AdditionalValueAdded__c.field-meta.xml
<CustomField>
    <fullName>AdditionalValueAdded__c</fullName>
    <label>Additional Value Added</label>
    <type>TextArea</type>
</CustomField>