force-app/main/default/objects/Opportunity/fields/AgeInDays__c.field-meta.xml
<CustomField>
    <fullName>AgeInDays__c</fullName>
    <label>Age (In Days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>