force-app/main/default/objects/Opportunity/fields/AnticipatedWinDate__c.field-meta.xml
<CustomField>
    <fullName>AnticipatedWinDate__c</fullName>
    <label>Anticipated Win Date</label>
    <type>Date</type>
</CustomField>