force-app/main/default/objects/Opportunity/fields/AnyEventsYouForesee__c.field-meta.xml
<CustomField>
    <fullName>AnyEventsYouForesee__c</fullName>
    <label>Any Events you foresee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>