force-app/main/default/objects/Opportunity/fields/AnyPerceivedRiskInDoingTheJob__c.field-meta.xml
<CustomField>
    <fullName>AnyPerceivedRiskInDoingTheJob__c</fullName>
    <label>Any Perceived Risk in doing the Job</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>