force-app/main/default/objects/Opportunity/fields/AnyPotentialCrisis__c.field-meta.xml
<CustomField>
    <fullName>AnyPotentialCrisis__c</fullName>
    <label>Any Potential Crisis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>