force-app/main/default/objects/Opportunity/fields/Assigned_to_DS_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_DS_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is used to check , who is working on this Approval</description>
    <label>Assigned to DS Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enquiries1</relationshipName>
    <type>Lookup</type>
</CustomField>