force-app/main/default/objects/Opportunity/fields/AuditOpportunity__c.field-meta.xml
<CustomField>
    <fullName>AuditOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit Opportunity?</label>
    <type>Checkbox</type>
</CustomField>