force-app/main/default/objects/Opportunity/fields/BillingCurrency__c.field-meta.xml
<CustomField>
    <fullName>BillingCurrency__c</fullName>
    <label>Billing Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INR</fullName>
            </value>
            <value>
                <fullName>$</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>