force-app/main/default/objects/Opportunity/fields/C_level_Priorities__c.field-meta.xml
<CustomField>
    <fullName>C_level_Priorities__c</fullName>
    <label>C-level Priorities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>