force-app/main/default/objects/Opportunity/fields/Calculate_Days_On_Validate_Benefit_Stage__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Days_On_Validate_Benefit_Stage__c</fullName>
    <label>Calculate Days On Validate Benefit Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>