force-app/main/default/objects/Opportunity/fields/CCApprovalRejectionRecommendation__c.field-meta.xml
<CustomField>
    <fullName>CCApprovalRejectionRecommendation__c</fullName>
    <label>CC_Approval / Rejection Recommendation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>