force-app/main/default/objects/Opportunity/fields/CCApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>CCApprovalStatus__c</fullName>
    <label>CC_Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>