force-app/main/default/objects/Opportunity/fields/CCApprovedRejectedBy__c.field-meta.xml
<CustomField>
    <fullName>CCApprovedRejectedBy__c</fullName>
    <label>CC_Approved / Rejected By</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>