force-app/main/default/objects/Opportunity/fields/CCApprovedRejectedDate__c.field-meta.xml
<CustomField>
    <fullName>CCApprovedRejectedDate__c</fullName>
    <label>CC_Approved / Rejected Date</label>
    <type>Date</type>
</CustomField>