force-app/main/default/objects/Opportunity/fields/CH_Proposal_Status__c.field-meta.xml
<CustomField>
    <fullName>CH_Proposal_Status__c</fullName>
    <label>CH Proposal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>