force-app/main/default/objects/Opportunity/fields/Chamber__c.field-meta.xml
<CustomField>
    <fullName>Chamber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By Chamber</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Chamber)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>