force-app/main/default/objects/Opportunity/fields/Client_s_Agreement_to_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Client_s_Agreement_to_Purchase__c</fullName>
    <label>Client&apos;s Agreement to Purchase</label>
    <length>7480</length>
    <type>LongTextArea</type>
</CustomField>