force-app/main/default/objects/Opportunity/fields/ClientCommitmentToBuy__c.field-meta.xml
<CustomField>
    <fullName>ClientCommitmentToBuy__c</fullName>
    <label>Client&apos;s Commitment To Buy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>