force-app/main/default/objects/Opportunity/fields/ClientGroupName__c.field-meta.xml
<CustomField>
    <fullName>ClientGroupName__c</fullName>
    <label>Client Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>