force-app/main/default/objects/Opportunity/fields/CMSPoc__c.field-meta.xml
<CustomField>
    <fullName>CMSPoc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;M SPOC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>