force-app/main/default/objects/Opportunity/fields/CoCSL__c.field-meta.xml
<CustomField>
    <fullName>CoCSL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-CSL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>