force-app/main/default/objects/Opportunity/fields/CommitmentToBuyRemarks__c.field-meta.xml
<CustomField>
    <fullName>CommitmentToBuyRemarks__c</fullName>
    <label>Commitment To Buy Remarks</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>