force-app/main/default/objects/Opportunity/fields/Completed_Steps__c.field-meta.xml
<CustomField>
    <fullName>Completed_Steps__c</fullName>
    <label>Completed Steps</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>