force-app/main/default/objects/Opportunity/fields/ConfirmedValue__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedValue__c</fullName>
    <label>Confirmed Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>