force-app/main/default/objects/Opportunity/fields/ConflictCheck__c.field-meta.xml
<CustomField>
    <fullName>ConflictCheck__c</fullName>
    <label>Conflict Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Conflict</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>