force-app/main/default/objects/Opportunity/fields/ConflictCheckCompleted__c.field-meta.xml
<CustomField>
    <fullName>ConflictCheckCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conflict Check Completed</label>
    <type>Checkbox</type>
</CustomField>