force-app/main/default/objects/Opportunity/fields/Corridor__c.field-meta.xml
<CustomField>
    <fullName>Corridor__c</fullName>
    <label>Corridor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Corridor</valueSetName>
    </valueSet>
</CustomField>