force-app/main/default/objects/Opportunity/fields/CountTeam__c.field-meta.xml
<CustomField>
    <fullName>CountTeam__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count Team</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>