force-app/main/default/objects/Opportunity/fields/Creative_Hub_Id__c.field-meta.xml
<CustomField>
    <fullName>Creative_Hub_Id__c</fullName>
    <label>Creative Hub Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>