force-app/main/default/objects/Opportunity/fields/Creative_Hub_Status__c.field-meta.xml
<CustomField>
    <fullName>Creative_Hub_Status__c</fullName>
    <label>Creative Hub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>InProgess</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>