force-app/main/default/objects/Opportunity/fields/CrossSell__c.field-meta.xml
<CustomField>
    <fullName>CrossSell__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cross Sell</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Enquiries</relationshipLabel>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>