force-app/main/default/objects/Opportunity/fields/CrossSellOpportunities__c.field-meta.xml
<CustomField>
    <fullName>CrossSellOpportunities__c</fullName>
    <label>Cross Sell Opportunities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>