force-app/main/default/objects/Opportunity/fields/CSP__c.field-meta.xml
<CustomField>
    <fullName>CSP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>