force-app/main/default/objects/Opportunity/fields/Current_Steps__c.field-meta.xml
<CustomField>
    <fullName>Current_Steps__c</fullName>
    <label>Current Steps</label>
    <type>TextArea</type>
</CustomField>