force-app/main/default/objects/Opportunity/fields/CurrentCloseDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentCloseDate__c</fullName>
    <label>Current Close Date</label>
    <type>Date</type>
</CustomField>