force-app/main/default/objects/Opportunity/fields/Delivery_office_location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_office_location__c</fullName>
    <label>Delivery office location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_office_location</valueSetName>
    </valueSet>
</CustomField>