force-app/main/default/objects/Opportunity/fields/DiscountProposedBy__c.field-meta.xml
<CustomField>
    <fullName>DiscountProposedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount Proposed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>