force-app/main/default/objects/Opportunity/fields/DS_Team_Verification_date__c.field-meta.xml
<CustomField>
    <fullName>DS_Team_Verification_date__c</fullName>
    <label>DS Team Verification date</label>
    <type>Date</type>
</CustomField>