force-app/main/default/objects/Opportunity/fields/DSTeamApprovalRejectionDate__c.field-meta.xml
<CustomField>
    <fullName>DSTeamApprovalRejectionDate__c</fullName>
    <label>DS Team Approval / Rejection Date</label>
    <type>Date</type>
</CustomField>