force-app/main/default/objects/Opportunity/fields/DSTeamApprovalRejectionRemarks__c.field-meta.xml
<CustomField>
    <fullName>DSTeamApprovalRejectionRemarks__c</fullName>
    <label>DS Team Approval / Rejection Remarks</label>
    <length>32672</length>
    <type>LongTextArea</type>
</CustomField>