force-app/main/default/objects/Opportunity/fields/DSTeamApprovedRejectedBy__c.field-meta.xml
<CustomField>
    <fullName>DSTeamApprovedRejectedBy__c</fullName>
    <label>DS Team Approved RejectedBy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>