force-app/main/default/objects/Opportunity/fields/DueDateTillExpiry__c.field-meta.xml
<CustomField>
    <fullName>DueDateTillExpiry__c</fullName>
    <label>Due Date Till Expiry</label>
    <type>Date</type>
</CustomField>