force-app/main/default/objects/Opportunity/fields/EBITDA__c.field-meta.xml
<CustomField>
    <fullName>EBITDA__c</fullName>
    <label>EBITDA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>