force-app/main/default/objects/Opportunity/fields/Einstein_Prediction_Commercial__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Prediction_Commercial__c</fullName>
    <label>Einstein Prediction Commercial</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>