force-app/main/default/objects/Opportunity/fields/Einstein_Win_Prediction__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Win_Prediction__c</fullName>
    <label>Einstein Win Prediction</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>