force-app/main/default/objects/Opportunity/fields/Engagement_letter__c.field-meta.xml
<CustomField>
    <fullName>Engagement_letter__c</fullName>
    <label>Engagement letter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uploaded</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>