force-app/main/default/objects/Opportunity/fields/EngagementTypeOfWork__c.field-meta.xml
<CustomField>
    <fullName>EngagementTypeOfWork__c</fullName>
    <label>Engagement/ Type of work</label>
    <length>159</length>
    <type>Text</type>
</CustomField>