force-app/main/default/objects/Opportunity/fields/EnquiryConverter1__c.field-meta.xml
<CustomField>
    <fullName>EnquiryConverter1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry Converter 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>