force-app/main/default/objects/Opportunity/fields/EnquiryConverter2__c.field-meta.xml
<CustomField>
    <fullName>EnquiryConverter2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry Converter 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>