force-app/main/default/objects/Opportunity/fields/EstimatedRevenue__c.field-meta.xml
<CustomField>
    <fullName>EstimatedRevenue__c</fullName>
    <label>Estimated Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>