force-app/main/default/objects/Opportunity/fields/Executive_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Executive_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Sharing to EA</description>
    <label>Executive Assistant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EnquiriesEA</relationshipName>
    <type>Lookup</type>
</CustomField>