force-app/main/default/objects/Opportunity/fields/ExecutiveAsks__c.field-meta.xml
<CustomField>
    <fullName>ExecutiveAsks__c</fullName>
    <label>Executive Asks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>