force-app/main/default/objects/Opportunity/fields/ExpectedFee__c.field-meta.xml
<CustomField>
    <fullName>ExpectedFee__c</fullName>
    <label>Expected Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>