force-app/main/default/objects/Opportunity/fields/ExpectedRecovery__c.field-meta.xml
<CustomField>
    <fullName>ExpectedRecovery__c</fullName>
    <label>Expected Recovery %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>