force-app/main/default/objects/Opportunity/fields/Expertice_for_Duplicate_Rule__c.field-meta.xml
<CustomField>
    <fullName>Expertice_for_Duplicate_Rule__c</fullName>
    <label>Expertice for Duplicate Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>