force-app/main/default/objects/Opportunity/fields/Fee_INR_Lacs__c.field-meta.xml
<CustomField>
    <fullName>Fee_INR_Lacs__c</fullName>
    <label>Fee (INR Lacs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>