force-app/main/default/objects/Opportunity/fields/FinalProposedFee__c.field-meta.xml
<CustomField>
    <fullName>FinalProposedFee__c</fullName>
    <label>Final Proposed Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>