force-app/main/default/objects/Opportunity/fields/FinalProposedOPE__c.field-meta.xml
<CustomField>
    <fullName>FinalProposedOPE__c</fullName>
    <label>Final Proposed OPE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>