force-app/main/default/objects/Opportunity/fields/FY20__c.field-meta.xml
<CustomField>
    <fullName>FY20__c</fullName>
    <label>FY20</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>