force-app/main/default/objects/Opportunity/fields/FY21__c.field-meta.xml
<CustomField>
    <fullName>FY21__c</fullName>
    <label>FY21</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>