force-app/main/default/objects/Opportunity/fields/FY22__c.field-meta.xml
<CustomField>
    <fullName>FY22__c</fullName>
    <label>FY22</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>