force-app/main/default/objects/Opportunity/fields/FY22Projection__c.field-meta.xml
<CustomField>
    <fullName>FY22Projection__c</fullName>
    <label>FY22 Projection</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>