force-app/main/default/objects/Opportunity/fields/GrossProfit__c.field-meta.xml
<CustomField>
    <fullName>GrossProfit__c</fullName>
    <label>Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>