force-app/main/default/objects/Opportunity/fields/GrowthPotential__c.field-meta.xml
<CustomField>
    <fullName>GrowthPotential__c</fullName>
    <label>Growth Potential</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>