force-app/main/default/objects/Opportunity/fields/GT_Prediction_Score__c.field-meta.xml
<CustomField>
    <fullName>GT_Prediction_Score__c</fullName>
    <label>GT Prediction Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>