force-app/main/default/objects/Opportunity/fields/GTEmployee__c.field-meta.xml
<CustomField>
    <fullName>GTEmployee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GT Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>