force-app/main/default/objects/Opportunity/fields/GTIFirmReferringPersonName__c.field-meta.xml
<CustomField>
    <fullName>GTIFirmReferringPersonName__c</fullName>
    <label>GTI Firm - Referring Person&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>