force-app/main/default/objects/Opportunity/fields/GTIMemberFirmReferral__c.field-meta.xml
<CustomField>
    <fullName>GTIMemberFirmReferral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GTI Member Firm Referral</label>
    <type>Checkbox</type>
</CustomField>